@@ -19,11 +19,12 @@ plymouth (0.9.4-2) UNRELEASED; urgency=medium
     not migrated to usr-merge.
   * debian/control: Add Rules-Requires-Root: no
   * Move some executables to /usr/libexec now that's allowed in the policy
+  * debian/rules: Rely on dh_autoreconf to update config.guess and config.sub
 
   [ Alper Nebi Yasak ]
   * Include less modules when appropriate. (Closes: #940014)
 
- -- Laurent Bigonville <bigon@debian.org>  Fri, 24 Jan 2020 07:31:04 +0100
+ -- Laurent Bigonville <bigon@debian.org>  Fri, 24 Jan 2020 07:40:29 +0100
 
 plymouth (0.9.4-1.1) unstable; urgency=medium
 
